fix z-index issue on projects page

--- a/style.css
+++ b/style.css
@@ -770,18 +770,6 @@ video {
   margin-right: 0.5rem;
 }
 
-.mr-6 {
-  margin-right: 1.5rem;
-}
-
-.mr-12 {
-  margin-right: 3rem;
-}
-
-.mr-20 {
-  margin-right: 5rem;
-}
-
 .block {
   display: block;
 }
@@ -840,6 +828,10 @@ video {
   height: fit-content;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
 .h-48 {
   height: 12rem;
 }
@@ -854,10 +846,6 @@ video {
 
 .h-5 {
   height: 1.25rem;
-}
-
-.h-6 {
-  height: 1.5rem;
 }
 
 .min-h-screen {
@@ -888,6 +876,10 @@ video {
   width: auto;
 }
 
+.w-16 {
+  width: 4rem;
+}
+
 .w-72 {
   width: 18rem;
 }
@@ -900,8 +892,8 @@ video {
   width: 3.5rem;
 }
 
-.w-16 {
-  width: 4rem;
+.w-11 {
+  width: 2.75rem;
 }
 
 .w-3 {
@@ -934,10 +926,6 @@ video {
 
 .max-w-4xl {
   max-width: 56rem;
-}
-
-.max-w-sm {
-  max-width: 24rem;
 }
 
 .flex-1 {
@@ -979,20 +967,16 @@ video {
   list-style-type: disc;
 }
 
+.list-none {
+  list-style-type: none;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.flex-row-reverse {
-  flex-direction: row-reverse;
-}
-
 .flex-col {
   flex-direction: column;
-}
-
-.flex-col-reverse {
-  flex-direction: column-reverse;
 }
 
 .place-items-end {
@@ -1062,6 +1046,12 @@ video {
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-0 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0px * var(--tw-space-y-reverse));
+}
+
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1072,6 +1062,12 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
@@ -1133,21 +1129,6 @@ video {
   border-color: rgb(82 82 91 / var(--tw-border-opacity));
 }
 
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-red-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
-}
-
-.border-blue-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--tw-border-opacity));
-}
-
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -1160,6 +1141,10 @@ video {
 
 .bg-slate-400\/20 {
   background-color: rgb(148 163 184 / 0.2);
+}
+
+.bg-transparent {
+  background-color: transparent;
 }
 
 .bg-gray-300 {
@@ -1189,10 +1174,6 @@ video {
   background-color: rgb(255 255 255 / 0.3);
 }
 
-.bg-transparent {
-  background-color: transparent;
-}
-
 .bg-zinc-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
@@ -1202,12 +1183,12 @@ video {
   --tw-bg-opacity: 0.3;
 }
 
-.bg-opacity-60 {
-  --tw-bg-opacity: 0.6;
-}
-
 .bg-opacity-75 {
   --tw-bg-opacity: 0.75;
+}
+
+.bg-opacity-60 {
+  --tw-bg-opacity: 0.6;
 }
 
 .bg-opacity-40 {
@@ -1501,13 +1482,13 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-zinc-400 {
-  --tw-shadow-color: #a1a1aa;
+.shadow-neutral-100 {
+  --tw-shadow-color: #f5f5f5;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.shadow-neutral-100 {
-  --tw-shadow-color: #f5f5f5;
+.shadow-zinc-400 {
+  --tw-shadow-color: #a1a1aa;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -2072,10 +2053,6 @@ video {
     max-width: 32rem;
   }
 
-  .md\:max-w-md {
-    max-width: 28rem;
-  }
-
   .md\:shrink-0 {
     flex-shrink: 0;
   }
@@ -2223,16 +2200,16 @@ video {
     border-radius: 0.75rem;
   }
 
+  .lg\:p-32 {
+    padding: 8rem;
+  }
+
   .lg\:p-24 {
     padding: 6rem;
   }
 
   .lg\:p-20 {
     padding: 5rem;
-  }
-
-  .lg\:p-32 {
-    padding: 8rem;
   }
 
   .lg\:p-6 {
